# cec450-final-project

./: .gitmodules  README.md
project/: CMakeLists.txt
project/include/: Controller.h  DisplayManager.h  Effectors.h  EffectorsMonitor.h  EffectorsUpdater.h  LogMessage.h  PressureSim.h  SensorReaders.h  SensorValues.h  Sensors.h  SensorsMonitor.h  SensorsUpdater.h  Simulator.h  TemperatureController.h  UpdateReader.h  Visualizer.h  VisualizerMessaage.h  WaitFreeReadData.h  WaterFlowController.h  array.h  heater.h  simulator.h  valve.h  vector.h
project/src/: Controller.c  DisplayManager.c  Effectors.c  EffectorsMonitor.c  EffectorsUpdater.c  LogMessage.c  PressureSim.c  SensorReaders.c  Sensors.c  SensorsMonitor.c  SensorsUpdater.c  Simulator.c  TemperatureController.c  UpdateReader.c  Visualizer.c  VisualizerMessage.c  WaitFreeReadData.c  WaterFlowController.c  array.c  heater.c  main.c  pressureSim.c  simulator.c  valve.c  vector.c
